k8s/namespaces/development/forgejo-runner/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo-runner
  namespace: development
  labels:
    app.kubernetes.io/name: forgejo-runner
    app.kubernetes.io/managed-by: flux
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo-runner
      app.kubernetes.io/managed-by: flux
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
